# ft_irc

./: CMakeLists.txt  Makefile  README.md  readme.MD
inc/: Channel.hpp  Client.h  Client.hpp  Command.hpp  Server.h  Server.hpp
src/: Channel.cpp  Client.cpp  Command.cpp  Old_server.cpp  Server.cpp  Server.h  main.cpp
